--- a/backend/workbench/application/twig-common/embed/zmsForm.twig
+++ b/backend/workbench/application/twig-common/embed/zmsForm.twig
@@ -57,8 +57,7 @@
                     {% elseif button %}
                         {% include 'form/save-buttons.twig' %}
                     {% else %}
-                        {% block buttonArea %}
-                        {% endblock %}
+                        {% block buttonArea %}{% endblock %}
                     {% endif %}
                 </div>
             </div>
