--- a/backend/workbench/project/frontend/Index/assets/main.html.twig
+++ b/backend/workbench/project/frontend/Index/assets/main.html.twig
@@ -1,20 +1,16 @@
 {% extends "extends/master.twig" %}
 
-{% block requirejs %}./assets/js/my-profile{% endblock requirejs %}
-{% block pagetitle %}My Profile{% endblock pagetitle %}
+{% block requirejs %}./assets/js/packages/index{% endblock requirejs %}
+{% block pagetitle %}Site Index{% endblock pagetitle %}
 
 {% block content %}
     {% set includes = ['index'] %}
 
     <ul class="menu">
-    {% for twig in includes %}
-        <li><a href="#/{{ twig }}">{{ twig | humanize }}</a></li>
-    {% endfor %}
+    {% for twig in includes %}<li><a href="#/{{ twig }}">{{ twig | humanize }}</a></li>{% endfor %}
     </ul>
     {% for twig in includes %}
-    <script type="text/ng-template" id="{{ twig }}">
-        {% include _dir_relative_ ~ twig ~ '.twig' %}
-    </script>
+    <script type="text/ng-template" id="{{ twig }}">{% include _dir_relative_ ~ twig ~ '.twig' %}</script>
     {% endfor %}
 {% endblock content %}
 
