--- a/backend/workbench/application/twig-common/extends/master.twig
+++ b/backend/workbench/application/twig-common/extends/master.twig
@@ -6,16 +6,20 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>{# For HTML tag <title> #}{% block pagetitle %}{% endblock %}</title>
+        <title>{# For HTML tag <title> #}{% block pagetitle %}{{ ctrl.title }}{% endblock %}</title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="assets/css/bootstrap-theme/wcms.min.css" />
-        <link rel="stylesheet" href="assets/css/angular-extension/ng-table.min.css">
-        <link rel="stylesheet" href="assets/css/customized/main.css">
-        <link rel="stylesheet" href="assets/css/datetimepicker.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-        <script src="assets/js/vendor/modernizr/modernizr.js"></script>
+        <link rel="stylesheet" href="{{ _web_relative }}assets/js/vendor/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="{{ _web_relative }}assets/css/bootstrap-theme/cerulean.min.css" />
+        <link rel="stylesheet" href="{{ _web_relative }}assets/css/angular-extension/ng-table.min.css" />
+        <link rel="stylesheet" href="{{ _web_relative }}assets/css/customized/main.css" />
+        <link rel="stylesheet" href="{{ _web_relative }}assets/css/datetimepicker.css" />
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="{{ _web_relative }}assets/js/downloads/textAngular-1.3.6/src/textAngular.css" />
+        <link rel="stylesheet" href="{{ _web_relative }}assets/js/vendor/chosen/chosen.min.css" />
+        <link rel="stylesheet" href="{{ _web_relative }}assets/js/vendor/angular-chosen-localytics/chosen-spinner.css" />
+
+        <script src="{{ _web_relative }}assets/js/vendor/modernizr/modernizr.js"></script>
         {# For HTML <head> after all css + js #}{% block head %}{% endblock %}
         {{ debugbar['head'] | raw }}
     </head>
@@ -25,16 +29,22 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="wrap">
+            {% include 'master/header.twig' %}
+
             <div class="container-fluid" id="main"><!-- Main -->
-                <div class="row" ng-controller="mainContainerCtrl">
+                <div class="row">
+                    <div col-menu></div>
+
+                    <div id="mainContainer" class="col-md-{[{ colMenu.colRight }]}" ng-controller="mainContainerCtrl">
 {# For HTML <body>'s content inside mainContainerCtrl #}
 {% block content %}{% endblock %}
-                    <div ng-view></div>
+                        <div ng-view></div>
+                    </div>
                 </div>
             </div><!-- /Main -->
         </div>
 
-        <script src="./assets/js/vendor/requirejs/require.js" data-main="{# The path of the requirejs #}{% block requirejs %}{% endblock %}"></script>
+        <script src="{{ _web_relative }}assets/js/vendor/requirejs/require.js" data-main="{# The path of the requirejs #}{% block requirejs %}../assets/js/packages/{{ ctrl.path }}/main{% endblock %}"></script>
         {# For HTML <body>'s footer (before debugbar) #}{% block bodyFooter %}{% endblock %}
         {{ debugbar['body'] | raw }}
     </body>
