--- a/backend/workbench/application/twig-common/form/save-buttons.twig
+++ b/backend/workbench/application/twig-common/form/save-buttons.twig
@@ -1,4 +1,4 @@
 <button type="submit"
-    ng-click="save()" class="{{ bs.btn.d }}"
+    ng-click="save()" class="{{ bs.btn._ }}"
     ng-disabled="form.$invalid">Save</button>
-<a href="#list" class="{{ bs.btn.d }}">Cancel</a>
+<a href="#list" class="{{ bs.btn._ }}">Cancel</a>
