--- a/backend/workbench/application/twig-common/extends/master.twig
+++ b/backend/workbench/application/twig-common/extends/master.twig
@@ -12,12 +12,12 @@
         <link rel="stylesheet" href="{{ _web_relative }}assets/js/vendor/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="{{ _web_relative }}assets/css/bootstrap-theme/cerulean.min.css" />
         <link rel="stylesheet" href="{{ _web_relative }}assets/css/angular-extension/ng-table.min.css" />
-        <link rel="stylesheet" href="{{ _web_relative }}assets/css/customized/main.css" />
         <link rel="stylesheet" href="{{ _web_relative }}assets/css/datetimepicker.css" />
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" />
         <link rel="stylesheet" href="{{ _web_relative }}assets/js/downloads/textAngular-1.3.6/src/textAngular.css" />
         <link rel="stylesheet" href="{{ _web_relative }}assets/js/vendor/chosen/chosen.min.css" />
         <link rel="stylesheet" href="{{ _web_relative }}assets/js/vendor/angular-chosen-localytics/chosen-spinner.css" />
+        <link rel="stylesheet" href="{{ _web_relative }}assets/css/customized/main.css" />
 
         <script src="{{ _web_relative }}assets/js/vendor/modernizr/modernizr.js"></script>
         {# For HTML <head> after all css + js #}{% block head %}{% endblock %}
@@ -31,7 +31,7 @@
         <div id="wrap">
             {% include 'master/header.twig' %}
 
-            <div class="container-fluid" id="main"><!-- Main -->
+            <div class="container-fluid" id="main">
                 <div class="row">
                     <div col-menu></div>
 
@@ -41,9 +41,10 @@
                         <div ng-view></div>
                     </div>
                 </div>
-            </div><!-- /Main -->
+            </div><!-- #Main -->
         </div>
 
+        <script>var hkcFrameworkRoute = {{ hkcFrameworkRoute | json_encode | raw }};</script>
         <script src="{{ _web_relative }}assets/js/vendor/requirejs/require.js" data-main="{# The path of the requirejs #}{% block requirejs %}../assets/js/packages/{{ ctrl.path }}/main{% endblock %}"></script>
         {# For HTML <body>'s footer (before debugbar) #}{% block bodyFooter %}{% endblock %}
         {{ debugbar['body'] | raw }}
