--- a/backend/workbench/application/twig-common/form/workflow-buttons.twig
+++ b/backend/workbench/application/twig-common/form/workflow-buttons.twig
@@ -4,7 +4,7 @@
 <div ng-init="btnClicked = false">
     <div class="alert alert-info" ng-show="btnClicked">Loading ...</div>
     <button type="submit"
-        ng-click="btnClicked = true; save();" class="{{ bs.btn.d }}"
+        ng-click="btnClicked = true; save();" class="{{ bs.btn._ }}"
         ng-disabled="
             btnClicked
             || form.$invalid
@@ -18,16 +18,16 @@
                     && (! {{ data }}.edited || ({{ data }}.edited && ! {{ data }}.editedByAdmin))
                     && ! {{ record }}.requestApproval
                 ))"> (In Workflow)</span></button>
-    <a href="#list" class="{{ bs.btn.d }}" ng-disabled="btnClicked">Cancel</a>
-    <a class="{{ bs.btn.d }}"
+    <a href="#list" class="{{ bs.btn._ }}" ng-disabled="btnClicked">Cancel</a>
+    <a class="{{ bs.btn._ }}"
        ng-show="{{ data }}.edited && {{ data }}.role === 2 && ({{ data }}.editedByAdmin || {{ record }}.requestApproval)"
        ng-click="btnClicked = true; launch();"
        ng-disabled="btnClicked">Launch</a>
-    <a class="{{ bs.btn.d }}"
+    <a class="{{ bs.btn._ }}"
        ng-show="{{ data }}.edited && {{ data }}.role === 2 && {{ record }}.requestApproval"
        ng-click="btnClicked = true; reject()"
        ng-disabled="btnClicked">Reject</a>
-    <a class="{{ bs.btn.d }}"
+    <a class="{{ bs.btn._ }}"
        ng-show="{{ data }}.edited && {{ data }}.role === 1 && ! {{ data }}.editedByAdmin && ! {{ record }}.requestApproval"
        ng-click="btnClicked = true; requestApproval()"
        ng-disabled="btnClicked">Request Approval</a>
